added files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 data_engine/builders/__pycache__/customerbuilder.cpython-310.pyc
 data_engine/builders/__pycache__/enums.cpython-310.pyc
 data_engine/classes/__pycache__/basecustomer.cpython-310.pyc
+data_engine/classes/__pycache__/basebuilder.cpython-310.pyc
+data_engine/classes/__pycache__/builder_enums.cpython-310.pyc
+data_engine/classes/__pycache__/builder_errors.cpython-310.pyc
 services/__pycache__/customerservice.cpython-310.pyc
