--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ data_engine/classes/__pycache__/builder_enums.cpython-310.pyc
 data_engine/classes/__pycache__/builder_errors.cpython-310.pyc
 services/__pycache__/customerservice.cpython-310.pyc
 services/__pycache__/baseservice.cpython-310.pyc
+data_engine/builders/__pycache__/basebuilder.cpython-310.pyc
+data_engine/builders/__pycache__/builder_errors.cpython-310.pyc
+data_engine/builders/__pycache__/officebuilder.cpython-310.pyc
+data_engine/classes/__pycache__/baseoffice.cpython-310.pyc
